test/compile_errors/stage1/obj/const_is_a_statement_not_an_expression.zig
export fn f() void {
    (const a = 0);
}

// const is a statement, not an expression
//
// tmp.zig:2:6: error: expected expression, found 'const'
